fix gradient overflow

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -12,7 +12,8 @@
   &::before {
     content: '';
     position: absolute;
-    width: 1185px;
+    width: 100%;
+    max-width: 1185px;
     height: 1076px;
     background: radial-gradient(41.38% 40.85% at 56.08% 46.24%,
         #3719ca 0%,
